--- a/src/main/resources/Fxml/Login.fxml
+++ b/src/main/resources/Fxml/Login.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21.0.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.LoginController">
+<BorderPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.LoginController">
    <right>
       <HBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="330.0" styleClass="right_side_pane" stylesheets="@../Styles/login.css" BorderPane.alignment="CENTER">
          <children>
@@ -64,7 +64,7 @@
                               <Insets top="5.0" />
                            </VBox.margin>
                         </Label>
-                        <TextField prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css">
+                        <TextField fx:id="textEmail" prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css">
                            <opaqueInsets>
                               <Insets />
                            </opaqueInsets>
@@ -98,7 +98,7 @@
                               <Insets top="3.0" />
                            </VBox.margin>
                         </VBox>
-                        <Button mnemonicParsing="false" prefHeight="23.0" prefWidth="345.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Accedi" fx:id="loginButton">
+                        <Button fx:id="loginButton" mnemonicParsing="false" prefHeight="23.0" prefWidth="345.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Accedi">
                            <VBox.margin>
                               <Insets top="30.0" />
                            </VBox.margin>
