--- a/src/main/resources/Fxml/SignUp.fxml
+++ b/src/main/resources/Fxml/SignUp.fxml
@@ -62,7 +62,7 @@
                               <Insets top="3.0" />
                            </VBox.margin>
                         </VBox>
-                        <Button mnemonicParsing="false" prefHeight="23.0" prefWidth="345.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Registrati">
+                        <Button fx:id="signUpButton" mnemonicParsing="false" prefHeight="23.0" prefWidth="345.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Registrati">
                            <VBox.margin>
                               <Insets top="30.0" />
                            </VBox.margin>
@@ -77,9 +77,9 @@
                         </Button>
                      </children>
                   </VBox>
-                  <Pane prefHeight="500.0" prefWidth="670.0">
+                  <Pane prefHeight="313.0" prefWidth="670.0">
                      <children>
-                        <VBox alignment="TOP_CENTER" layoutX="65.0" layoutY="91.0" prefHeight="410.0" prefWidth="270.0">
+                        <VBox alignment="TOP_CENTER" layoutX="65.0" layoutY="91.0" prefHeight="215.0" prefWidth="270.0">
                            <children>
                               <Label alignment="CENTER" prefHeight="20.0" prefWidth="82.0" text="Nome">
                                  <font>
@@ -89,7 +89,7 @@
                                     <Insets />
                                  </VBox.margin>
                               </Label>
-                              <TextField prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css">
+                              <TextField fx:id="textNome" prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css">
                                  <opaqueInsets>
                                     <Insets />
                                  </opaqueInsets>
@@ -105,7 +105,7 @@
                                     <Insets top="7.0" />
                                  </VBox.margin>
                               </Label>
-                              <DatePicker prefWidth="333.0" styleClass="input_login" stylesheets="@../Styles/login.css">
+                              <DatePicker fx:id="dataNascitaText" prefWidth="333.0" styleClass="input_login" stylesheets="@../Styles/login.css">
                                  <VBox.margin>
                                     <Insets top="5.0" />
                                  </VBox.margin>
@@ -129,7 +129,7 @@
                               <Insets right="10.0" />
                            </padding>
                         </VBox>
-                        <VBox alignment="TOP_CENTER" layoutX="335.0" layoutY="91.0" prefHeight="410.0" prefWidth="270.0">
+                        <VBox alignment="TOP_CENTER" layoutX="335.0" layoutY="91.0" prefHeight="221.0" prefWidth="270.0">
                            <children>
                               <Label alignment="CENTER" prefHeight="20.0" prefWidth="82.0" text="Cognome:">
                                  <font>
@@ -139,7 +139,7 @@
                                     <Insets />
                                  </VBox.margin>
                               </Label>
-                              <TextField prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css">
+                              <TextField fx:id="textCognome" prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css">
                                  <opaqueInsets>
                                     <Insets />
                                  </opaqueInsets>
@@ -155,7 +155,7 @@
                                     <Insets top="7.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css">
+                              <TextField fx:id="emailText" prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css">
                                  <opaqueInsets>
                                     <Insets />
                                  </opaqueInsets>
