--- a/src/main/resources/Fxml/Login.fxml
+++ b/src/main/resources/Fxml/Login.fxml
@@ -98,6 +98,11 @@
                               <Insets top="3.0" />
                            </VBox.margin>
                         </VBox>
+                        <Label fx:id="labelLoginError" prefHeight="18.0" prefWidth="332.0" text="Email o Password errati.." textFill="#ff0000" visible="false">
+                           <font>
+                              <Font name="Arial" size="12.0" />
+                           </font>
+                        </Label>
                         <Button fx:id="loginButton" mnemonicParsing="false" prefHeight="23.0" prefWidth="345.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Accedi">
                            <VBox.margin>
                               <Insets top="30.0" />
