--- a/src/main/resources/Fxml/SignUp.fxml
+++ b/src/main/resources/Fxml/SignUp.fxml
@@ -1,24 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import de.jensd.fx.glyphs.fontawesome.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.SignUpController">
+<BorderPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.SignUpController">
    <right>
       <HBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="330.0" styleClass="right_side_pane" stylesheets="@../Styles/login.css" BorderPane.alignment="CENTER">
          <children>
@@ -97,6 +86,11 @@
                                     <Insets top="5.0" />
                                  </VBox.margin>
                               </TextField>
+                              <Label fx:id="labelErroreNome" prefHeight="18.0" prefWidth="269.0" text="Nome utente non valido..." textFill="#f20707" visible="false">
+                                 <font>
+                                    <Font name="Arial" size="12.0" />
+                                 </font>
+                              </Label>
                               <Label alignment="CENTER" prefHeight="20.0" prefWidth="169.0" text="Data di nascita:">
                                  <font>
                                     <Font name="Arial Bold" size="14.0" />
@@ -110,6 +104,7 @@
                                     <Insets top="5.0" />
                                  </VBox.margin>
                               </DatePicker>
+                              <Label fx:id="labelDataErrata" prefHeight="18.0" prefWidth="304.0" text="Data di nascita non valida.." textFill="#f20505" visible="false" />
                               <Label alignment="CENTER" prefHeight="20.0" prefWidth="169.0" text="Password:">
                                  <font>
                                     <Font name="Arial Bold" size="14.0" />
@@ -120,7 +115,13 @@
                               </Label>
                               <StackPane prefWidth="330.0">
                                  <children>
-                                    <PasswordField fx:id="PasswordField" prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css" />
+                                    <PasswordField fx:id="passwordField" prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css">
+                                       <opaqueInsets>
+                                          <Insets />
+                                       </opaqueInsets>
+                                       <StackPane.margin>
+                                          <Insets />
+                                       </StackPane.margin></PasswordField>
                                     <TextField fx:id="passwordVisibile" styleClass="input_login" stylesheets="@../Styles/login.css" visible="false" />
                                  </children>
                               </StackPane>
@@ -147,6 +148,7 @@
                                     <Insets top="5.0" />
                                  </VBox.margin>
                               </TextField>
+                              <Label fx:id="labelErroreCognome" prefHeight="18.0" prefWidth="290.0" text="Cognome non valido..." textFill="#fa0808" visible="false" />
                               <Label alignment="CENTER" prefHeight="20.0" prefWidth="82.0" text="Email:">
                                  <font>
                                     <Font name="Arial Bold" size="14.0" />
@@ -163,6 +165,7 @@
                                     <Insets top="5.0" />
                                  </VBox.margin>
                               </TextField>
+                              <Label fx:id="labelEmailNonValida" prefHeight="18.0" prefWidth="327.0" text="Email non valida.." textFill="#ec0505" visible="false" />
                               <Label alignment="CENTER" prefHeight="20.0" prefWidth="169.0" text="Ripeti password:">
                                  <font>
                                     <Font name="Arial Bold" size="14.0" />
@@ -173,8 +176,8 @@
                               </Label>
                               <StackPane prefWidth="330.0">
                                  <children>
-                                    <TextField fx:id="RepeatPasswordVisibile" styleClass="input_login" stylesheets="@../Styles/login.css" visible="false" />
-                                    <PasswordField fx:id="RepeatPasswordField" prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css" />
+                                    <TextField fx:id="repeatPasswordVisibile" styleClass="input_login" stylesheets="@../Styles/login.css" visible="false" />
+                                    <PasswordField fx:id="repeatPasswordField" prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css" />
                                  </children>
                               </StackPane>
                            </children>
@@ -185,6 +188,7 @@
                         <Button fx:id="eyeButton" layoutX="605.0" layoutY="264.0" mnemonicParsing="false" styleClass="my_button_toggle_pasword" stylesheets="@../Styles/login.css" text="🔍" />
                      </children>
                   </Pane>
+                  <Label fx:id="labelPasswordDiverse" layoutX="69.0" layoutY="314.0" prefHeight="18.0" prefWidth="213.0" text="Password non uguali" textFill="#dc0303" visible="false" />
                </children>
             </AnchorPane>
          </children>
