--- a/src/main/resources/Fxml/Client/ClientMenu.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenu.fxml
@@ -8,43 +8,43 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="180.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="180.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientMenuController">
    <children>
       <AnchorPane prefHeight="1080.0" prefWidth="180.0" styleClass="client_menu_container" stylesheets="@../../Styles/clientMenu.css">
          <children>
             <VBox prefHeight="80.0" prefWidth="160.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             <VBox layoutY="108.0" prefHeight="400.0" prefWidth="160.0" styleClass="vbox" stylesheets="@../../Styles/clientMenu.css" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="108.0">
                <children>
-                  <Button mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Dashboard">
+                  <Button fx:id="dashboardButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Dashboard">
                      <graphic>
                         <FontAwesomeIconView glyphName="HOME" size="18" />
                      </graphic></Button>
-                  <Button mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Scheda">
+                  <Button fx:id="schedaButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Scheda">
                      <graphic>
                         <FontAwesomeIconView glyphName="ARCHIVE" size="18" />
                      </graphic></Button>
-                  <Button mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Prenotazioni">
+                  <Button fx:id="prenotazioneButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Prenotazioni">
                      <graphic>
                         <FontAwesomeIconView glyphName="CALENDAR" size="18" />
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Parametri">
+                  <Button fx:id="parametriButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Parametri">
                      <graphic>
                         <FontAwesomeIconView glyphName="" size="18" />
                      </graphic>
                   </Button>
                   <Line endX="120.0" />
-                  <Button mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Profilo">
+                  <Button fx:id="myProfileButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Profilo">
                      <graphic>
                         <FontAwesomeIconView glyphName="USER" size="18" />
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Contattaci">
+                  <Button fx:id="contactUsButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Contattaci">
                      <graphic>
                         <FontAwesomeIconView glyphName="PHONE" size="18" />
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Logout">
+                  <Button fx:id="logoutButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Logout">
                      <graphic>
                         <FontAwesomeIconView glyphName="EXTERNAL_LINK" size="20" />
                      </graphic>
