--- a/src/main/resources/Fxml/Client/ClientMenu.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenu.fxml
@@ -2,74 +2,90 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="180.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientMenuController">
-   <children>
-      <AnchorPane prefHeight="1080.0" prefWidth="180.0" styleClass="client_menu_container" stylesheets="@../../Styles/clientMenu.css">
-         <children>
-            <VBox prefHeight="80.0" prefWidth="160.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <VBox layoutY="108.0" prefHeight="400.0" prefWidth="160.0" styleClass="vbox" stylesheets="@../../Styles/clientMenu.css" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="108.0">
-               <children>
-                  <Button fx:id="dashboardButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Dashboard">
-                     <graphic>
-                        <FontAwesomeIconView glyphName="HOME" size="18" />
-                     </graphic></Button>
-                  <Button fx:id="schedaButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Scheda">
-                     <graphic>
-                        <FontAwesomeIconView glyphName="ARCHIVE" size="18" />
-                     </graphic></Button>
-                  <Button fx:id="prenotazioneButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Prenotazioni">
-                     <graphic>
-                        <FontAwesomeIconView glyphName="CALENDAR" size="18" />
-                     </graphic>
-                  </Button>
-                  <Button fx:id="parametriButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Parametri">
-                     <graphic>
-                        <FontAwesomeIconView glyphName="" size="18" />
-                     </graphic>
-                  </Button>
-                  <Line endX="120.0" />
-                  <Button fx:id="myProfileButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Profilo">
-                     <graphic>
-                        <FontAwesomeIconView glyphName="USER" size="18" />
-                     </graphic>
-                  </Button>
-                  <Button fx:id="contactUsButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Contattaci">
-                     <graphic>
-                        <FontAwesomeIconView glyphName="PHONE" size="18" />
-                     </graphic>
-                  </Button>
-                  <Button fx:id="logoutButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Logout">
-                     <graphic>
-                        <FontAwesomeIconView glyphName="EXTERNAL_LINK" size="20" />
-                     </graphic>
-                  </Button>
-               </children>
-            </VBox>
-            <VBox prefHeight="120.0" prefWidth="130.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
-               <children>
-                  <Button mnemonicParsing="false">
-                     <graphic>
-                        <ImageView fitHeight="34.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../Images/moon.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../Images/LOGO.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </VBox>
-         </children>
-      </AnchorPane>
-   </children>
-</VBox>
+<ScrollPane fitToHeight="true" fitToWidth="true" styleClass="client_menu_container" stylesheets="@../../Styles/clientMenu.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientMenuController">
+   <content>
+      <VBox spacing="10" style="-fx-padding: 10;" styleClass="client_menu_container" stylesheets="@../../Styles/clientMenu.css">
+         <!-- Sezione Profilo -->
+         <VBox stylesheets="@../../Styles/clientMenu.css">
+            <children>
+               <ImageView fx:id="imageUtente" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../../Images/profile-icon-avatar-icon-user-icon-person-icon-free-png.png" />
+                  </image>
+               </ImageView>
+               <Label fx:id="nomeCognomeUtente" text="Matteo Mamoliti" />
+               <Label fx:id="emailUtente" text="matteo@gmail.com" />
+            </children>
+         </VBox>
+
+         <!-- Sezione Menu -->
+         <VBox spacing="5" styleClass="vbox" stylesheets="@../../Styles/clientMenu.css">
+            <children>
+               <Button fx:id="dashboardButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Dashboard">
+                  <graphic>
+                     <FontAwesomeIconView glyphName="HOME" size="18" />
+                  </graphic>
+               </Button>
+               <Button fx:id="schedaButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Scheda">
+                  <graphic>
+                     <FontAwesomeIconView glyphName="ARCHIVE" size="18" />
+                  </graphic>
+               </Button>
+               <Button fx:id="prenotazioneButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Prenotazioni">
+                  <graphic>
+                     <FontAwesomeIconView glyphName="CALENDAR" size="18" />
+                  </graphic>
+               </Button>
+               <Button fx:id="parametriButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Parametri">
+                  <graphic>
+                     <FontAwesomeIconView glyphName="" size="18" />
+                  </graphic>
+               </Button>
+               <Line endX="120.0" />
+               <Button fx:id="myProfileButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Profilo">
+                  <graphic>
+                     <FontAwesomeIconView glyphName="USER" size="18" />
+                  </graphic>
+               </Button>
+               <Button fx:id="contactUsButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Contattaci">
+                  <graphic>
+                     <FontAwesomeIconView glyphName="PHONE" size="18" />
+                  </graphic>
+               </Button>
+            </children>
+         </VBox>
+
+         <!-- Sezione Footer -->
+         <VBox alignment="CENTER" spacing="5">
+            <children>
+               <Button fx:id="logoutButton" mnemonicParsing="false" styleClass="my_button_window" stylesheets="@../../Styles/clientMenu.css" text="Logout">
+                  <graphic>
+                     <FontAwesomeIconView glyphName="EXTERNAL_LINK" size="20" />
+                  </graphic>
+               </Button>
+               <Button mnemonicParsing="false">
+                  <graphic>
+                     <ImageView fitHeight="34.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@../../Images/moon.png" />
+                        </image>
+                     </ImageView>
+                  </graphic>
+               </Button>
+               <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../../Images/LOGO.png" />
+                  </image>
+               </ImageView>
+            </children>
+         </VBox>
+      </VBox>
+   </content>
+</ScrollPane>
