--- a/src/main/resources/Styles/Dashboard.css
+++ b/src/main/resources/Styles/Dashboard.css
@@ -6,8 +6,8 @@
 .pane_offerte_dashboard{
     -fx-background-color: #FFFFFF;
     -fx-border-color: #FFFFFF #E1E1E1 #E1E1E1 #E1E1E1;
-    -fx-border-width: 3px;
     -fx-background-radius: 15% ;
+    -fx-border-color: transparent transparent transparent transparent;
     -fx-border-radius: 0px 0px 30px 30px;
 
 
