--- a/src/main/resources/Fxml/Client/Dashboard.fxml
+++ b/src/main/resources/Fxml/Client/Dashboard.fxml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<BorderPane stylesheets="@../../Styles/Dashboard.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientDashboardController">
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<BorderPane stylesheets="@../../Styles/Dashboard.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientDashboardController">
    <left>
       <Pane prefHeight="1080.0" prefWidth="0.0" BorderPane.alignment="CENTER">
          <children>
-            
+
          </children>
       </Pane>
    </left>
    <center>
       <AnchorPane BorderPane.alignment="CENTER">
          <children>
-            <VBox layoutX="12.0" layoutY="20.0" prefHeight="300.0" styleClass="pane_offerte_dashboard" stylesheets="@../../Styles/Dashboard.css" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="358.0" AnchorPane.topAnchor="20.0">
+            <VBox layoutX="12.0" layoutY="20.0" prefHeight="200.0" styleClass="pane_offerte_dashboard" stylesheets="@../../Styles/Dashboard.css" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="20.0">
                <children>
                   <HBox prefHeight="95.0" prefWidth="1534.0" styleClass="testo_offerte_dashboard" stylesheets="@../../Styles/Dashboard.css">
                      <children>
@@ -58,4 +65,13 @@
       <String fx:value="sfondo" />
       <String fx:value="testo_offerte_dashboard" />
    </styleClass>
+   <right>
+      <AnchorPane styleClass="client_menu_container" stylesheets="@../../Styles/clientMenu.css" BorderPane.alignment="CENTER">
+         <children>
+            <AnchorPane fx:id="containerCalendario" layoutX="15.0" layoutY="55.0" />
+            <Separator layoutX="-3.0" layoutY="-5.0" orientation="VERTICAL" />
+            <Separator layoutX="1.0" layoutY="334.0" prefWidth="511.0" />
+         </children>
+      </AnchorPane>
+   </right>
 </BorderPane>
