Menu Admin e Sez Utenti

--- a/src/main/resources/Fxml/Admin/Admin.fxml
+++ b/src/main/resources/Fxml/Admin/Admin.fxml
@@ -4,7 +4,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.wepower.wepower.Controllers.Admin.AdminController"
+            fx:controller="com.wepower.wepower.Controllers.Admin.MenuAdminController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
