--- a/src/main/resources/Fxml/Client/ClientMenuView/Prenotazioni.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/Prenotazioni.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.PrenotazioniController">
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.PrenotazioniController">
     <left>
         <Pane prefHeight="1080.0" prefWidth="0.0" BorderPane.alignment="CENTER">
             <children>
@@ -15,38 +17,20 @@
     </left>
     <center>
         <AnchorPane BorderPane.alignment="CENTER">
-            <children>
-                <VBox layoutX="12.0" layoutY="20.0" prefHeight="300.0" styleClass="pane_offerte_dashboard"  AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="358.0" AnchorPane.topAnchor="20.0">
-                    <children>
-                        <HBox prefHeight="95.0" prefWidth="1534.0" styleClass="testo_offerte_dashboard" >
-                            <children>
-                                <Label fx:id="labelNomeUtenteSaluto" prefHeight="98.0" text="Ciao, Matteo">
-                                    <font>
-                                        <Font name="Arial Bold" size="30.0" />
-                                    </font>
-                                    <HBox.margin>
-                                        <Insets left="20.0" />
-                                    </HBox.margin>
-                                </Label>
-                                <Separator orientation="VERTICAL" prefHeight="200.0">
-                                    <HBox.margin>
-                                        <Insets bottom="15.0" left="20.0" right="20.0" top="15.0" />
-                                    </HBox.margin>
-                                </Separator>
-                                <Label prefHeight="98.0" text="Ecco alcune offerte riservate per te">
-                                    <font>
-                                        <Font name="Arial Bold" size="30.0" />
-                                    </font>
-                                </Label>
-                            </children>
-                        </HBox>
-                    </children>
-                </VBox>
-            </children>
+         <children>
+            <AnchorPane fx:id="containerGiorniPrenotazione" layoutX="4.0" layoutY="106.0" />
+         </children>
         </AnchorPane>
     </center>
-    <styleClass>
-        <String fx:value="sfondo" />
-        <String fx:value="testo_offerte_dashboard" />
-    </styleClass>
+   <top>
+          <VBox prefHeight="86.0" prefWidth="644.0" styleClass="pane_offerte_dashboard" BorderPane.alignment="CENTER">
+              <children>
+                    <Label prefHeight="98.0" text="Prenota il tuo allenamento o il tuo corso">
+                        <font>
+                            <Font name="Arial Bold" size="30.0" />
+                        </font>
+                    </Label>
+              </children>
+          </VBox>
+   </top>
 </BorderPane>
