--- a/src/main/resources/Fxml/Client/ClientMenuView/Prenotazioni.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/Prenotazioni.fxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -16,11 +17,16 @@
         </Pane>
     </left>
     <center>
-        <AnchorPane BorderPane.alignment="CENTER">
+        <HBox BorderPane.alignment="CENTER">
          <children>
-            <AnchorPane fx:id="containerGiorniPrenotazione" layoutX="4.0" layoutY="106.0" />
+            <HBox fx:id="containerGiorniPrenotazione" />
+            <VBox fx:id="corpoStorico" prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <ScrollPane fx:id="contenitoreStoricoCliente" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" style="-fx-padding: 0; -fx-background-color: transparent; -fx-border-insets: 0; -fx-background-insets: 0;" />
+               </children>
+            </VBox>
          </children>
-        </AnchorPane>
+        </HBox>
     </center>
    <top>
           <VBox prefHeight="86.0" prefWidth="644.0" styleClass="pane_offerte_dashboard" BorderPane.alignment="CENTER">
