--- a/src/main/resources/Fxml/Client/ClientMenuView/Prenotazioni.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/Prenotazioni.fxml
@@ -19,12 +19,15 @@
     <center>
         <HBox BorderPane.alignment="CENTER">
          <children>
-            <HBox fx:id="containerGiorniPrenotazione" />
-            <VBox fx:id="corpoStorico" prefHeight="200.0" prefWidth="100.0">
-               <children>
-                  <ScrollPane fx:id="contenitoreStoricoCliente" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" style="-fx-padding: 0; -fx-background-color: transparent; -fx-border-insets: 0; -fx-background-insets: 0;" />
-               </children>
-            </VBox>
+            <HBox fx:id="containerGiorniPrenotazione" prefWidth="500.0" />
+            <ScrollPane fx:id="contenitoreStoricoCliente"  hbarPolicy="NEVER" style="-fx-padding: 0; -fx-background-color: transparent; -fx-border-insets: 0; -fx-background-insets: 0;">
+               <content>
+                  <VBox fx:id="corpoStorico" >
+                     <children>
+                        <Label text="ciaooo" />
+                     </children></VBox>
+               </content>
+            </ScrollPane>
          </children>
         </HBox>
     </center>
