--- a/src/main/resources/Fxml/Client/ClientMenuView/Scheda.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/Scheda.fxml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx/17.0.12"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.SchedaController">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-    <top>
-        <ScrollPane prefHeight="660.0" prefWidth="1920.0" BorderPane.alignment="TOP_CENTER">
+<AnchorPane prefHeight="820.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.SchedaController">
+
+    <children>
+      <HBox prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Button mnemonicParsing="false" text="EliminaScheda" fx:id="eliminaSchedaButton"/>
+         </children>
+      </HBox>
+        <!-- Parte superiore -->
+        <ScrollPane layoutY="460.0" prefHeight="360.0" prefWidth="1920.0" >
             <content>
-                <VBox fx:id="containerSchedaAllenamento" prefHeight="659.0" prefWidth="1916.0" />
+                <VBox fx:id="containerEsercizi" prefHeight="360.0" prefWidth="1916.0" />
             </content>
         </ScrollPane>
-    </top>
 
-
-    <center>
-        <ScrollPane prefHeight="660.0" prefWidth="1920.0" BorderPane.alignment="CENTER">
+        <!-- Parte centrale -->
+        <ScrollPane layoutY="100.0" prefHeight="360.0" prefWidth="1920.0">
             <content>
-                <VBox fx:id="containerEsercizi" prefHeight="659.0" prefWidth="1916.0" />
+                <VBox fx:id="containerSchedaAllenamento" prefHeight="360.0" prefWidth="1916.0" />
             </content>
         </ScrollPane>
-    </center>
-
-</BorderPane>
+    </children>
+</AnchorPane>
