Grafico peso utente + fix

--- a/src/main/resources/Fxml/Client/DashboardClient.fxml
+++ b/src/main/resources/Fxml/Client/DashboardClient.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
@@ -58,28 +59,53 @@
                   </ScrollPane>
                </children>
             </VBox>
-            <VBox layoutX="20.0" layoutY="442.0" />
             <HBox layoutX="55.0" layoutY="442.0" prefHeight="354.0" prefWidth="1111.0">
                <children>
-                  <MenuButton fx:id="choiceEsercizioScheda" mnemonicParsing="false" text="Scegli l'esercizio">
-                  <items> </items>
-               </MenuButton>
-                  <LineChart fx:id="graficoMassimali">
-                    <xAxis>
-                      <CategoryAxis side="BOTTOM" />
-                    </xAxis>
-                    <yAxis>
-                      <NumberAxis side="LEFT" />
-                    </yAxis>
-                  </LineChart>
-                  <BarChart fx:id="graficoPresenzePalestra" prefHeight="354.0" prefWidth="504.0">
-                    <xAxis>
-                      <CategoryAxis label="Mesi" side="BOTTOM" />
-                    </xAxis>
-                    <yAxis>
-                      <NumberAxis label="Numero prenotazioni" side="LEFT" />
-                    </yAxis>
-                  </BarChart>
+                  <VBox alignment="CENTER">
+                     <children>
+                        <MenuButton fx:id="choiceEsercizioScheda" mnemonicParsing="false" text="Seleziona Esercizio">
+                          <items>
+                          </items>
+                        </MenuButton>
+                        <LineChart fx:id="graficoMassimali">
+                          <xAxis>
+                            <CategoryAxis side="BOTTOM" />
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis side="LEFT" />
+                          </yAxis>
+                        </LineChart>
+                     </children></VBox>
+                  <VBox>
+                     <children>
+                        <BarChart fx:id="graficoPresenzePalestra" prefHeight="354.0" prefWidth="504.0">
+                          <xAxis>
+                            <CategoryAxis label="Mesi" side="BOTTOM" />
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis label="Numero prenotazioni" side="LEFT" />
+                          </yAxis>
+                           <VBox.margin>
+                              <Insets top="24.0" />
+                           </VBox.margin>
+                        </BarChart>
+                     </children>
+                  </VBox>
+                  <VBox>
+                     <children>
+                        <LineChart fx:id="graficoPeso">
+                          <xAxis>
+                            <CategoryAxis label="Data" side="BOTTOM" />
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis label="Peso" side="LEFT" />
+                          </yAxis>
+                           <VBox.margin>
+                              <Insets top="24.0" />
+                           </VBox.margin>
+                        </LineChart>
+                     </children>
+                  </VBox>
                </children>
             </HBox>
          </children>
@@ -94,15 +120,17 @@
          <children>
             <AnchorPane fx:id="containerCalendario" layoutX="15.0" layoutY="55.0" />
             <Separator layoutX="-2.0" layoutY="-5.0" orientation="VERTICAL" prefHeight="1088.0" prefWidth="0.0" />
-            <Separator fx:id="separatorSotto" layoutX="1.0" layoutY="373.0" prefHeight="0.0" prefWidth="511.0" />
+            <Separator fx:id="separatorSotto" layoutX="1.0" layoutY="373.0" prefHeight="0.0" prefWidth="511.0" AnchorPane.topAnchor="390.0" />
 
-            <AnchorPane fx:id="chatBotContainer" layoutY="380.0" prefHeight="400.0" prefWidth="500.0" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10">
+            <AnchorPane fx:id="chatBotContainer" layoutY="380.0" prefHeight="400.0" prefWidth="500.0" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="400.0">
                <children>
                   <TextArea fx:id="chatArea" editable="false" prefHeight="360.0" wrapText="true" />
                   <TextField fx:id="inputField" layoutY="360.0" prefHeight="40.0" />
                   <Button fx:id="inviaButton" layoutX="420.0" layoutY="360.0" text="Invia" />
                </children>
             </AnchorPane>
+            <RadioButton fx:id="btnPrenotato" layoutX="15.0" layoutY="350.0" mnemonicParsing="false" text="Prenotato" AnchorPane.topAnchor="370.0" />
+            <RadioButton fx:id="btnPalestraChiusa" layoutX="112.0" layoutY="350.0" mnemonicParsing="false" text="Palestra chiusa" AnchorPane.topAnchor="370.0" />
          </children>
       </AnchorPane>
    </right>
