--- a/src/main/resources/Fxml/Admin/ContainerDashboardAdmin.fxml
+++ b/src/main/resources/Fxml/Admin/ContainerDashboardAdmin.fxml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.AdminController">
+<?import javafx.geometry.Insets?>
+<BorderPane prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../../Styles/DashboardAdmin.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.AdminController">
 
     <top>
         <fx:include source="MenuAdmin.fxml" />
     </top>
-   <bottom>
-        <fx:include source="DashboardAdmin.fxml" />
-   </bottom>
+   <center>
+       <VBox>
 
+           <fx:include source="DashboardAdmin.fxml" />
+       </VBox>
+   </center>
 
 </BorderPane>
