--- a/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
+++ b/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
@@ -1,16 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" styleClass="sfondoD" stylesheets="@../../Styles/DashboardAdmin.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.AdminDashboardController">
+<BorderPane prefHeight="1080.0" prefWidth="1920.0" styleClass="sfondoD" stylesheets="@../../Styles/DashboardAdmin.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.AdminDashboardController">
+   
 
-   <bottom>
-      <ScrollPane prefHeight="660.0" prefWidth="1920.0" BorderPane.alignment="CENTER">
-         <content>
-            <VBox fx:id="containerUsers" prefHeight="659.0" prefWidth="1916.0" />
-         </content>
+
+   <center>
+
+      <ScrollPane fitToHeight="true" fitToWidth="true" prefWidth="1920.0">
+         <TableView fx:id="tableUtenti" prefHeight="600" prefWidth="800">
+            <columnResizePolicy>
+               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
+            <columns>
+               <TableColumn fx:id="colId" prefWidth="50" text="ID" />
+               <TableColumn fx:id="colNome" prefWidth="150" text="Nome" />
+               <TableColumn fx:id="colCognome" prefWidth="150" text="Cognome" />
+               <TableColumn fx:id="colEmail" prefWidth="200" text="Email" />
+               <TableColumn fx:id="colDataNascita" prefWidth="200" text="Data di Nascita" />
+               <TableColumn fx:id="colStatoAbbonamento" prefWidth="150" text="Stato Abbonamento" />
+               <TableColumn fx:id="colDataRinnovo" prefWidth="150" text="Data Rinnovo" />
+               <TableColumn fx:id="colDataScadenza" prefWidth="150" text="Data Scadenza" />
+               <TableColumn fx:id="colSesso" prefWidth="100" text="Sesso" />
+               <TableColumn fx:id="colCertificato" prefWidth="80" text="Certificato" />
+               <TableColumn fx:id="colResetPassword"  prefWidth="75.0" text="Recupera&#10;Password" />
+               <TableColumn fx:id="colModifica" prefWidth="100" text="Modifica" />
+               <TableColumn fx:id="colElimina" prefWidth="100" text="Elimina" />
+
+            </columns>
+         </TableView>
       </ScrollPane>
-   </bottom>
+   </center>
+   <top>
+      <Button mnemonicParsing="false" styleClass="bottoneAddUtente" stylesheets="@../../Styles/DashboardAdmin.css" text="+ Aggiungi utente" BorderPane.alignment="CENTER_RIGHT">
+         <BorderPane.margin>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </BorderPane.margin>
+      </Button>
+   </top>
 </BorderPane>
