PRIMA BOZZA DASHBOARD RESPONSIVE

--- a/src/main/resources/Fxml/Admin/ContainerDashboardAdmin.fxml
+++ b/src/main/resources/Fxml/Admin/ContainerDashboardAdmin.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.geometry.Insets?>
-<BorderPane prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../../Styles/DashboardAdmin.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.AdminController">
+<BorderPane minHeight="1000" minWidth="1200" stylesheets="@../../Styles/DashboardAdmin.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.AdminController">
 
     <top>
         <fx:include source="MenuAdmin.fxml" />
