--- a/src/main/resources/Fxml/Client/DashboardClient.fxml
+++ b/src/main/resources/Fxml/Client/DashboardClient.fxml
@@ -21,117 +21,122 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<!-- ClientDashboard.fxml – versione responsive corretta (JavaFX 21) -->
+
 <BorderPane stylesheets="@../../Styles/Dashboard.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientDashboardController">
-   <left>
-      <Pane prefHeight="1080.0" prefWidth="0.0" BorderPane.alignment="CENTER">
-         <children>
 
-         </children>
-      </Pane>
-   </left>
-   <center>
-      <AnchorPane prefHeight="1083.0" prefWidth="1359.0" BorderPane.alignment="CENTER">
-         <children>
-            <VBox layoutX="12.0" layoutY="20.0" prefHeight="200.0" styleClass="pane_offerte_dashboard" stylesheets="@../../Styles/Dashboard.css" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="20.0">
-               <children>
-                  <Label fx:id="labelNomeUtenteSaluto" prefHeight="98.0" text="Ciao, Matteo">
-                     <font>
-                        <Font name="Arial Bold" size="30.0" />
-                     </font>
-                  </Label>
-                  <HBox prefHeight="95.0" prefWidth="1534.0" styleClass="testo_offerte_dashboard" stylesheets="@../../Styles/Dashboard.css">
-                     <children>
-                        <Label prefHeight="98.0" text="Ecco alcune offerte riservate per te">
-                           <font>
-                              <Font name="Arial Bold" size="30.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-                  <Separator prefWidth="200.0">
-                     <VBox.margin>
-                        <Insets left="20.0" right="20.0" />
-                     </VBox.margin>
-                  </Separator>
-                  <ScrollPane fx:id="scrollPaneBanner" fitToHeight="true" fitToWidth="false" hbarPolicy="NEVER" pannable="true" vbarPolicy="NEVER">
-                     <HBox fx:id="displayerBanner" spacing="20">
-                     </HBox>
-                  </ScrollPane>
-               </children>
-            </VBox>
-            <HBox layoutX="55.0" layoutY="442.0" prefHeight="354.0" prefWidth="1111.0">
-               <children>
-                  <VBox alignment="CENTER">
-                     <children>
-                        <MenuButton fx:id="choiceEsercizioScheda" mnemonicParsing="false" text="Seleziona Esercizio">
-                          <items>
-                          </items>
-                        </MenuButton>
-                        <LineChart fx:id="graficoMassimali">
-                          <xAxis>
-                            <CategoryAxis side="BOTTOM" />
-                          </xAxis>
-                          <yAxis>
-                            <NumberAxis side="LEFT" />
-                          </yAxis>
-                        </LineChart>
-                     </children></VBox>
-                  <VBox>
-                     <children>
-                        <BarChart fx:id="graficoPresenzePalestra" prefHeight="354.0" prefWidth="504.0">
-                          <xAxis>
-                            <CategoryAxis label="Mesi" side="BOTTOM" />
-                          </xAxis>
-                          <yAxis>
-                            <NumberAxis label="Numero prenotazioni" side="LEFT" />
-                          </yAxis>
-                           <VBox.margin>
-                              <Insets top="24.0" />
-                           </VBox.margin>
-                        </BarChart>
-                     </children>
-                  </VBox>
-                  <VBox>
-                     <children>
-                        <LineChart fx:id="graficoPeso">
-                          <xAxis>
-                            <CategoryAxis label="Data" side="BOTTOM" />
-                          </xAxis>
-                          <yAxis>
-                            <NumberAxis label="Peso" side="LEFT" />
-                          </yAxis>
-                           <VBox.margin>
-                              <Insets top="24.0" />
-                           </VBox.margin>
-                        </LineChart>
-                     </children>
-                  </VBox>
-               </children>
-            </HBox>
-         </children>
-      </AnchorPane>
-   </center>
-   <styleClass>
-      <String fx:value="sfondo" />
-      <String fx:value="testo_offerte_dashboard" />
-   </styleClass>
-   <right>
-      <AnchorPane styleClass="client_menu_container" stylesheets="@../../Styles/clientMenu.css" BorderPane.alignment="CENTER">
-         <children>
-            <AnchorPane fx:id="containerCalendario" layoutX="15.0" layoutY="55.0" />
-            <Separator layoutX="-2.0" layoutY="-5.0" orientation="VERTICAL" prefHeight="1088.0" prefWidth="0.0" />
-            <Separator fx:id="separatorSotto" layoutX="1.0" layoutY="373.0" prefHeight="0.0" prefWidth="511.0" AnchorPane.topAnchor="390.0" />
+    <!-- Sidebar sinistra (vuota / logo) -->
+    <left>
+        <Pane BorderPane.alignment="CENTER" />
+    </left>
 
-            <AnchorPane fx:id="chatBotContainer" layoutY="380.0" prefHeight="400.0" prefWidth="500.0" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="400.0">
-               <children>
-                  <TextArea fx:id="chatArea" editable="false" prefHeight="360.0" wrapText="true" />
-                  <TextField fx:id="inputField" layoutY="360.0" prefHeight="40.0" />
-                  <Button fx:id="inviaButton" layoutX="420.0" layoutY="360.0" text="Invia" />
-               </children>
-            </AnchorPane>
-            <RadioButton fx:id="btnPrenotato" layoutX="15.0" layoutY="350.0" mnemonicParsing="false" text="Prenotato" AnchorPane.topAnchor="370.0" />
-            <RadioButton fx:id="btnPalestraChiusa" layoutX="112.0" layoutY="350.0" mnemonicParsing="false" text="Palestra chiusa" AnchorPane.topAnchor="370.0" />
-         </children>
-      </AnchorPane>
-   </right>
+    <!-- Contenuto principale scrollabile -->
+    <center>
+        <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="AS_NEEDED" BorderPane.alignment="CENTER">
+            <content>
+                <!-- VBox root -->
+                <VBox spacing="40">
+                    <padding>
+                        <Insets bottom="20" left="12" right="12" top="20" />
+                    </padding>
+
+                    <!-- Header / offerte -->
+                    <VBox spacing="10" styleClass="pane_offerte_dashboard" stylesheets="@../../Styles/Dashboard.css">
+                        <children>
+                            <Label fx:id="labelNomeUtenteSaluto" text="Ciao, Matteo">
+                                <font><Font name="Arial Bold" size="30.0" /></font>
+                            </Label>
+
+                            <Label styleClass="testo_offerte_dashboard" text="Ecco alcune offerte riservate per te">
+                                <font><Font name="Arial Bold" size="30.0" /></font>
+                            </Label>
+
+                            <Separator />
+
+                            <ScrollPane fx:id="scrollPaneBanner" fitToHeight="true" fitToWidth="false" hbarPolicy="NEVER" pannable="true" vbarPolicy="NEVER">
+                                <content>
+                                    <HBox fx:id="displayerBanner" spacing="20" />
+                                </content>
+                            </ScrollPane>
+                        </children>
+                    </VBox>
+
+                    <!-- Sezione grafici -->
+                    <HBox spacing="20" VBox.vgrow="ALWAYS">
+                        <!-- Colonna 1 -->
+                        <VBox alignment="TOP_CENTER" spacing="8" HBox.hgrow="ALWAYS">
+                            <children>
+                                <MenuButton fx:id="choiceEsercizioScheda" text="Seleziona Esercizio" />
+                                <LineChart fx:id="graficoMassimali" VBox.vgrow="ALWAYS">
+                                    <xAxis><CategoryAxis label="Data Inserimento" side="BOTTOM" /></xAxis>
+                                    <yAxis><NumberAxis label="Peso" side="LEFT" /></yAxis>
+                                </LineChart>
+                            </children>
+                        </VBox>
+
+                        <!-- Colonna 2 -->
+                        <VBox HBox.hgrow="ALWAYS">
+                            <children>
+                                <BarChart fx:id="graficoPresenzePalestra" VBox.vgrow="ALWAYS">
+                                    <xAxis><CategoryAxis label="Mesi" side="BOTTOM" /></xAxis>
+                                    <yAxis><NumberAxis label="Numero prenotazioni" side="LEFT" /></yAxis>
+                           <VBox.margin>
+                              <Insets top="30.0" />
+                           </VBox.margin>
+                                </BarChart>
+                            </children>
+                        </VBox>
+
+                        <!-- Colonna 3 -->
+                        <VBox HBox.hgrow="ALWAYS">
+                            <children>
+                                <LineChart fx:id="graficoPeso" VBox.vgrow="ALWAYS">
+                                    <xAxis><CategoryAxis label="Data" side="BOTTOM" /></xAxis>
+                                    <yAxis><NumberAxis label="Peso" side="LEFT" /></yAxis>
+                           <VBox.margin>
+                              <Insets top="30.0" />
+                           </VBox.margin>
+                                </LineChart>
+                            </children>
+                        </VBox>
+                    </HBox>
+
+                </VBox> <!-- fine VBox root centrale -->
+            </content>
+        </ScrollPane>
+    </center>
+
+    <!-- Colonna destra -->
+    <right>
+        <AnchorPane prefWidth="200.0" styleClass="client_menu_container" stylesheets="@../../Styles/clientMenu.css" BorderPane.alignment="CENTER">
+            <children>
+                <!-- Calendario -->
+                <AnchorPane fx:id="containerCalendario" AnchorPane.leftAnchor="15" AnchorPane.topAnchor="55" />
+
+                <!-- Separatore orizzontale -->
+                <Separator AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="370" />
+
+                <!-- ChatBot area -->
+                <AnchorPane fx:id="chatBotContainer" AnchorPane.bottomAnchor="20" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="400">
+                    <children>
+                        <TextArea fx:id="chatArea" editable="false" wrapText="true" AnchorPane.bottomAnchor="40" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" />
+                        <TextField fx:id="inputField" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="80" />
+                        <Button fx:id="inviaButton" prefWidth="80" text="Invia" AnchorPane.bottomAnchor="0" AnchorPane.rightAnchor="0" />
+                    </children>
+                </AnchorPane>
+
+                <!-- Radio buttons -->
+                <RadioButton fx:id="btnPrenotato" text="Prenotato" AnchorPane.leftAnchor="15" AnchorPane.topAnchor="350" />
+                <RadioButton fx:id="btnPalestraChiusa" text="Palestra chiusa" AnchorPane.leftAnchor="112" AnchorPane.topAnchor="350" />
+            </children>
+         <padding>
+            <Insets right="10.0" />
+         </padding>
+        </AnchorPane>
+    </right>
+
+    <styleClass>
+        <String fx:value="sfondo" />
+        <String fx:value="testo_offerte_dashboard" />
+    </styleClass>
 </BorderPane>
