Fix grafici e fix switch view admin

--- a/src/main/resources/Fxml/Admin/ContainerAdminView.fxml
+++ b/src/main/resources/Fxml/Admin/ContainerAdminView.fxml
@@ -6,7 +6,14 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.geometry.Insets?>
-<BorderPane minHeight="1000" minWidth="1200" stylesheets="@../../Styles/DashboardAdmin.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.AdminController">
+<BorderPane
+        minHeight="1000"
+        minWidth="1200"
+        stylesheets="@../../Styles/DashboardAdmin.css"
+        xmlns="http://javafx.com/javafx/23.0.1"
+        xmlns:fx="http://javafx.com/fxml/1"
+        fx:controller="com.wepower.wepower.Controllers.Admin.AdminController"
+        fx:id="contenitore_admin_view">
 
     <top>
         <fx:include source="MenuAdmin.fxml" />
